[workspace]
members = [".", "protobufs", "tck"]

[package]
description = "The SDK for interacting with Hedera Hashgraph."
edition = "2021"
license = "Apache-2.0"
name = "hedera"
readme = "README.md"
repository = "https://github.com/hashgraph/hedera-sdk-rust"
version = "0.28.0"

[lib]
bench = false

[features]
default = ["mnemonic", "serde"]
# Enables config
serde = ["dep:serde", "dep:serde_derive", "dep:serde_json"]
mnemonic = []

[dependencies]
async-stream = "0.3.3"
backoff = "0.4.0"
ed25519-dalek = { version = "2.0.0", features = ["rand_core"] }
fraction = { version = "0.15.1", default-features = false }
futures-core = "0.3.21"
# Transitive dependency of tonic 0.11. Can be removed when tonic is upgraded to 0.12.
h2_03 = { package = "h2", version = "0.3.6" }
# Transitive dependency of tonic 0.12
h2 = "0.4.6"
hedera-proto = { path = "./protobufs", version = "0.13.0", features = [
  "time_0_3",
  "fraction",
] }
hex = "0.4.3"
hmac = "0.12.1"
# Dependency of tonic 0.11. Can be removed when tonic is upgraded to 0.12.
hyper_0 = { package = "hyper", version = "0.14", default-features = false }
# Dependency of tonic 0.12
hyper = { version = "1.3.1", default-features = false }
log = "0.4.17"
num-bigint = "0.4.3"
once_cell = "1.10.0"
pbkdf2 = { version = "0.12.0", default-features = false }
rand = "0.8.5"
sha2 = "0.10.2"
sha3 = "0.10.2"
thiserror = "1.0.31"
time = "0.3.9"
tokio = { version = "1.24.2", features = ["time"] }
tonic = { version = "0.11.0", features = ["tls", "tls-webpki-roots"] }
tinystr = { version = "0.7.0", default-features = false }
arc-swap = "1.6.0"
rlp = "0.5.2"
bytes = { version = "1.2.1", default-features = false }
pin-project-lite = "0.2.9"
unsize = "1.1.0"
parking_lot = "0.12.0"
serde_json = { version = "1.0.96", optional = true }
serde = { version = "1.0.163", optional = true }
serde_derive = { version = "1.0.163", optional = true }
pem = "3.0.1"
cbc = "0.1.2"
aes = "0.8.3"
md5 = "0.7.0"
sec1 = { version = "0.7.3", features = ["der"] }

[dependencies.futures-util]
version = "0.3.21"
default-features = false

[dependencies.prost]
version = "0.12.4"
default-features = false
features = ["std"]

[dependencies.rust_decimal]
version = "1.26.1"
default-features = false
features = ["std"]

[dependencies.k256]
version = "0.13.0"
default-features = false
features = ["ecdsa", "precomputed-tables", "std"]

[dependencies.pkcs8]
version = "0.10.0"
default-features = false
features = ["encryption"]

[dependencies.triomphe]
version = "0.1.8"
default-features = false
features = ["std", "arc-swap", "unsize"]

[dev-dependencies]
anyhow = "1.0.57"
assert_matches = "1.5.0"
clap = { version = "4.0.0", features = ["derive", "env"] }
dotenvy = "0.15.5"
expect-test = "1.4.0"
hex-literal = "0.4.0"
miniserde = "0.1.30"
parking_lot = "0.12.0"

[dev-dependencies.tokio]
version = "1.24.2"
features = ["rt-multi-thread", "macros", "parking_lot"]

[dev-dependencies.env_logger]
version = "0.11.3"
default-features = false
features = ["auto-color", "color", "humantime"]
