[package]
edition = "2021"
license = "Apache-2.0"
name = "hedera-proto"
description = "Protobufs for the Hedera™ Hashgraph SDK"
repository = "https://github.com/hashgraph/hedera-sdk-rust"
version = "0.15.0"

[features]

[dependencies]
fraction = { version = "0.15.1", default-features = false, optional = true }
prost-types = "0.13.4"
time_0_3 = { version = "0.3.9", optional = true, package = "time" }

[dependencies.prost]
version = "0.13.4"
default-features = false
features = ["std", "prost-derive"]

# todo: get the tonic devs to actually make `channel` usable without `transport` (it *should*, it's *documented* as such, but it just doesn't work).
[dependencies.tonic]
version = "0.12.3"

[build-dependencies]
anyhow = "1.0.55"
tonic-build = "0.12.3"
regex = "1.10.6"
fs_extra = "1.3.0"
