[package]
edition = "2021"
license = "Apache-2.0"
name = "hedera-proto"
description = "Protobufs for the Hedera™ Hashgraph SDK"
repository = "https://github.com/hashgraph/hedera-sdk-rust"
version = "0.15.0"

[features]

[dependencies]
fraction = { version = "0.15.1", default-features = false, optional = true }
prost-types = "0.12.4"
time_0_3 = { version = "0.3.9", optional = true, package = "time" }

[dependencies.prost]
version = "0.12.4"
default-features = false
features = ["std", "prost-derive"]

[build-dependencies]
anyhow = "1.0.55"
prost-build = "0.12.4"
regex = "1.10.6"
fs_extra = "1.3.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]
