[package]
name = "tck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
tokio = "1.36.0"
anyhow = "1.0.81"
tower = { version = "0.4.13", features = ["full"] }
tracing = "0.1.40"
async-trait = "0.1.77"
hyper = "0.14.20"
tower-http = { version = "0.4.0", features = ["full"] }
hedera = { path = "../." }

[dependencies.jsonrpsee]
version = "0.22.2"
features = ["full"]

