[package]
name = "tck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
tokio = { version = "1.36.0", features = ["signal"] }
anyhow = "1.0.81"
tower = { version = "0.4.13", features = ["tracing"] }
tracing = "0.1.40"
async-trait = "0.1.77"
hyper = "0.14.20"
tower-http = { version = "0.5.2", features = ["full"] }
hedera = { path = "../." }
hedera-proto = { path = "../protobufs", version = "0.14.0", features = [
  "time_0_3",
  "fraction",
] }
once_cell = "1.19.0"
futures-util = "0.3.30"
serde_json = "1.0.1"
serde = { version = "1.0.181", features = ["derive"] }
time = "0.3.9"
hex = "0.4.3"


[dependencies.jsonrpsee]
version = "0.23.2"
features = ["full"]

