[workspace]
members = [".", "protobufs"]

[package]
description = "The SDK for interacting with Hedera Hashgraph."
edition = "2021"
license = "Apache-2.0"
name = "hedera"
readme = "../../README.md"
repository = "https://github.com/hashgraph/hedera-sdk-rust"
version = "0.12.0"

[lib]
bench = false
crate-type = ["lib", "staticlib"]

[features]
default = ["mnemonic"]
ffi = [
  "cbindgen",
  "libc",
  "hedera-proto/serde",
  "serde",
  "serde_with",
  "serde_json",
  "time/serde",
  "serde/derive",
  "triomphe",
  "rust_decimal/serde"
]
mnemonic = []

[dependencies]
async-stream = "0.3.3"
backoff = "0.4.0"
ed25519-dalek = { version = "2.0.0-pre.0", features = ["rand_core"] }
fraction = { version = "0.11.0", default-features = false }
futures-core = "0.3.21"
futures-util = "0.3.21"
hedera-proto = { path = "./protobufs", version = "0.6.0", features = [
  "time_0_3",
  "fraction",
] }
hex = "0.4.3"
hmac = "0.12.1"
libc = { version = "0.2.135", optional = true }
log = "0.4.17"
num-bigint = "0.4.3"
once_cell = "1.10.0"
parking_lot = "0.12.0"
pbkdf2 = { version = "0.11.0", default-features = false }
pem-rfc7468 = { version = "0.6.0", features = ["std"] }
prost = "0.11.0"
rand = "0.8.5"
sha2 = "0.10.2"
sha3 = "0.10.2"
thiserror = "1.0.31"
time = "0.3.9"
tokio = { version = "1.24.2", features = ["rt-multi-thread"] }
tonic = "0.8.0"
tinystr = "0.7.0"
arc-swap = "1.6.0"
triomphe = { version = "0.1.8", default-features = false, optional = true }

[dependencies.rust_decimal]
version = "1.26.1"
default-features = false
features = ["std"]

[dependencies.k256]
version = "0.12.0"
default-features = false
features = ["arithmetic", "ecdsa", "pkcs8", "precomputed-tables", "std"]

[dependencies.pkcs8]
version = "0.9.0"
default_features = false
features = ["encryption"]

[dependencies.serde_json]
version = "1.0.79"
optional = true

[dependencies.serde]
version = "1.0.137"
optional = true

[dependencies.serde_with]
version = "2.0.0"
optional = true
features = ["base64", "time_0_3"]

[dev-dependencies]
anyhow = "1.0.57"
assert_matches = "1.5.0"
clap = { version = "4.0.0", features = ["derive", "env"] }
dotenvy = "0.15.5"
expect-test = "1.4.0"
hex-literal = "0.3.4"
tokio = { version = "1.24.2", features = ["full"] }

[build-dependencies]
cbindgen = { version = "0.24.3", default-features = false, optional = true }

[profile.release]
codegen-units = 1
debug = 0
lto = "fat"
opt-level = "z"
overflow-checks = false
panic = "abort"
strip = true
