# ffi dependencies for hedera-sdk-swift
# This is *NOT* for consumer use.
# The only way to interact with this crate is via FFI, and users using this crate for FFI are *NOT* supported.
# This is basically a duplicate of the varying modules in hedera-sdk-rust.
# purely for the smaller surface area.
# Thiis library is *also* temporary.
[package]
name = "hedera-crypto"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false
crate-type = ["lib", "staticlib"]

[dependencies]
ed25519-dalek = { version = "1.0.1", features = ["rand"] }
hex = "0.4.3"
hmac = "0.12.1"
k256 = "0.11.0"
libc = "0.2.135"
thiserror = "1.0.31"
rand = "0.8.5"
sha2 = "0.10.2"
sha3 = "0.10.2"
num-bigint = "0.4.3"
once_cell = "1.10.0"
pbkdf2 = { version = "0.11.0", default-features = false }
pem-rfc7468 = { version = "0.6.0", features = ["std"] }
rand_0_7 = { version = "0.7", package = "rand" }
num-integer = "0.1.45"
num-traits = "0.2.15"

[dependencies.pkcs8]
version = "0.9.0"
default_features = false
features = ["encryption"]

[build-dependencies]
cbindgen = { version = "0.24.3", default-features = false }

[dev-dependencies]
assert_matches = "1.5.0"
expect-test = "1.4.0"
hex-literal = "0.3.4"
