# ffi dependencies for hedera-sdk-swift
# This is *NOT* for consumer use.
# The only way to interact with this crate is via FFI, and users using this crate for FFI are *NOT* supported.
# This is basically a duplicate of the varying modules in hedera-sdk-rust.
# purely for the smaller surface area.
# Thiis library is *also* temporary.
[package]
name = "hedera-crypto"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
bench = false
crate-type = ["staticlib"]

[dependencies]
libc = { version = "0.2.135" }
sha3 = "0.10.2"

[build-dependencies]
cbindgen = { version = "0.24.3", default-features = false }
