[package]
name = "hedera-proto"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/hashgraph/hedera-sdk-rust"

[features]
# enable gRPC server generation
server = []

[dependencies]
prost = "0.11.0"
prost-types = "0.11.0"
tonic = "0.8.0"
serde = { version = "1.0.136", features = ["derive"], optional = true }
chrono_0_4 = { version = "0.4.19", optional = true, package = "chrono" }
time_0_2 = { version = "0.2.27", optional = true, package = "time" }
time_0_3 = { version = "0.3.9", optional = true, package = "time" }
fraction = { version = "0.11.0", optional = true }

[build-dependencies]
anyhow = "1.0.55"
tonic-build = "0.8.0"
